force-app/main/default/objects/Opportunity/fields/Access_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Access_Instructions__c</fullName>
    <inlineHelpText>Are there any access restrictions or special instructions for setting up the coffee cart at the venue?</inlineHelpText>
    <label>Access Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>