force-app/main/default/objects/Opportunity/fields/Additional_beverages_or_snacks__c.field-meta.xml
<CustomField>
    <fullName>Additional_beverages_or_snacks__c</fullName>
    <inlineHelpText>Would you like any additional beverages or snacks offered with the coffee service?</inlineHelpText>
    <label>Additional beverages or snacks</label>
    <type>TextArea</type>
</CustomField>