force-app/main/default/objects/Opportunity/fields/Anything_else_we_need_to_know__c.field-meta.xml
<CustomField>
    <fullName>Anything_else_we_need_to_know__c</fullName>
    <inlineHelpText>Let us know what you have in mind, we don&apos;t like saying &quot;no&quot; 😇</inlineHelpText>
    <label>Anything else we need to know</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>