force-app/main/default/objects/Opportunity/fields/Beverages_Coffee_Type__c.field-meta.xml
<CustomField>
    <fullName>Beverages_Coffee_Type__c</fullName>
    <inlineHelpText>What type of coffee or beverages would you like to be served?</inlineHelpText>
    <label>Beverages / Coffee Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coffee / Tea</fullName>
            </value>
            <value>
                <fullName>Hot Chocolate / Chai Latte</fullName>
            </value>
            <value>
                <fullName>Juice</fullName>
            </value>
            <value>
                <fullName>Soft drinks</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>