force-app/main/default/objects/Opportunity/fields/Booking_Created__c.field-meta.xml
<CustomField>
    <fullName>Booking_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Created?</label>
    <type>Checkbox</type>
</CustomField>