force-app/main/default/objects/Opportunity/fields/Branding_preference__c.field-meta.xml
<CustomField>
    <fullName>Branding_preference__c</fullName>
    <inlineHelpText>Are there any specific branding or presentation preferences for the coffee cups or napkins?</inlineHelpText>
    <label>Branding preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>