force-app/main/default/objects/Opportunity/fields/Cart_Area__c.field-meta.xml
<CustomField>
    <fullName>Cart_Area__c</fullName>
    <inlineHelpText>Is there a designated area for the coffee cart, and does it have access to power and water?</inlineHelpText>
    <label>Cart Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>