force-app/main/default/objects/Opportunity/fields/Client_Breif__c.field-meta.xml
<CustomField>
    <fullName>Client_Breif__c</fullName>
    <label>Client Brief</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Done Labels</fullName>
            </value>
            <value>
                <fullName>SENT</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>TO DO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>