force-app/main/default/objects/Opportunity/fields/Cloned_From_Booking__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From Booking</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>