force-app/main/default/objects/Opportunity/fields/Coffee_cart_to_be_branded_or_customized__c.field-meta.xml
<CustomField>
    <fullName>Coffee_cart_to_be_branded_or_customized__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Would you like the coffee cart to be branded or customized with your event&apos;s logo or theme?</inlineHelpText>
    <label>Coffee cart to be branded or customized?</label>
    <type>Checkbox</type>
</CustomField>