force-app/main/default/objects/Opportunity/fields/Coffee_service_end_time__c.field-meta.xml
<CustomField>
    <fullName>Coffee_service_end_time__c</fullName>
    <label>Coffee service end time</label>
    <type>Time</type>
</CustomField>