force-app/main/default/objects/Opportunity/fields/Coffee_service_start_time__c.field-meta.xml
<CustomField>
    <fullName>Coffee_service_start_time__c</fullName>
    <label>Coffee service start time</label>
    <type>Time</type>
</CustomField>