force-app/main/default/objects/Opportunity/fields/Created_from_Monday_com__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Monday_com__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Monday.com?</label>
    <type>Checkbox</type>
</CustomField>