force-app/main/default/objects/Opportunity/fields/Created_from_Quotient__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Quotient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Quotient?</label>
    <type>Checkbox</type>
</CustomField>