force-app/main/default/objects/Opportunity/fields/Delivery_Charges__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charges__c</fullName>
    <label>Delivery Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>