force-app/main/default/objects/Opportunity/fields/Enquiry_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Name__c</fullName>
    <label>Enquiry Naming</label>
    <length>50</length>
    <type>Text</type>
</CustomField>