force-app/main/default/objects/Opportunity/fields/Event_Logo_Theme__c.field-meta.xml
<CustomField>
    <fullName>Event_Logo_Theme__c</fullName>
    <label>Event Logo / Theme</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>