force-app/main/default/objects/Opportunity/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <description>Start time of event</description>
    <label>Event Time</label>
    <type>Time</type>
</CustomField>