force-app/main/default/objects/Opportunity/fields/Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Title__c</fullName>
    <description>Name/title of the event</description>
    <label>Event Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>