force-app/main/default/objects/Opportunity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Serve Buffet</fullName>
            </value>
            <value>
                <fullName>Boardroom</fullName>
            </value>
            <value>
                <fullName>Barista Service</fullName>
            </value>
            <value>
                <fullName>Promo Staff</fullName>
            </value>
            <value>
                <fullName>Sit Down Service</fullName>
            </value>
            <value>
                <fullName>Standing Event/ Cocktail Party</fullName>
            </value>
            <value>
                <fullName>Pantry Manager</fullName>
            </value>
            <value>
                <fullName>High Tea</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Boat Charter</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>