force-app/main/default/objects/Opportunity/fields/Food_Drinks_Menu__c.field-meta.xml
<CustomField>
    <fullName>Food_Drinks_Menu__c</fullName>
    <label>Food / Drinks Menu</label>
    <type>TextArea</type>
</CustomField>