force-app/main/default/objects/Opportunity/fields/Has_Accepted_Quote__c.field-meta.xml
<CustomField>
    <fullName>Has_Accepted_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Accepted?</label>
    <type>Checkbox</type>
</CustomField>