force-app/main/default/objects/Opportunity/fields/How_many_guests_are_you_expecting__c.field-meta.xml
<CustomField>
    <fullName>How_many_guests_are_you_expecting__c</fullName>
    <label>How many guests are you expecting?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>