force-app/main/default/objects/Opportunity/fields/Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_Id__c</fullName>
    <description>External field from Monday.com</description>
    <externalId>true</externalId>
    <label>Item ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>