force-app/main/default/objects/Opportunity/fields/Need_extra_services__c.field-meta.xml
<CustomField>
    <fullName>Need_extra_services__c</fullName>
    <label>Need extra services?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catering Options</fullName>
            </value>
            <value>
                <fullName>Cocktail Package</fullName>
            </value>
            <value>
                <fullName>Coffee Cart Package</fullName>
            </value>
            <value>
                <fullName>Equipment Hire</fullName>
            </value>
            <value>
                <fullName>Glassware Hire</fullName>
            </value>
            <value>
                <fullName>Slushie Machine</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Staff Only</fullName>
            </value>
            <value>
                <fullName>Wine Package</fullName>
            </value>
            <value>
                <fullName>Bubble Gun</fullName>
            </value>
            <value>
                <fullName>Mobile Bar Hire</fullName>
            </value>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Mocktail Package</fullName>
            </value>
            <value>
                <fullName>Liquor Licence Permit</fullName>
            </value>
            <value>
                <fullName>Juice Bar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>