force-app/main/default/objects/Opportunity/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <description>Expected guest count</description>
    <label>Number of Guests</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>