force-app/main/default/objects/Opportunity/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All done labels</fullName>
            </value>
            <value>
                <fullName>Posponed</fullName>
            </value>
            <value>
                <fullName>STAFF BOOKED</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>ADDED TO SLING</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>NOT GOING AHEAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>