force-app/main/default/objects/Opportunity/fields/Quote_creation_requested_in_Quotient__c.field-meta.xml
<CustomField>
    <fullName>Quote_creation_requested_in_Quotient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote creation requested in Quotient</label>
    <type>Checkbox</type>
</CustomField>