force-app/main/default/objects/Opportunity/fields/Selected_Package__c.field-meta.xml
<CustomField>
    <fullName>Selected_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to selected event package</description>
    <label>Selected Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Package__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Package__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>