force-app/main/default/objects/Opportunity/fields/Service_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Service_Requirements__c</fullName>
    <label>Service Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Waiter Staff</fullName>
            </value>
            <value>
                <fullName>Bar Service</fullName>
            </value>
            <value>
                <fullName>Coffee Cart</fullName>
            </value>
            <value>
                <fullName>Event Coordination</fullName>
            </value>
            <value>
                <fullName>Setup/Breakdown</fullName>
            </value>
            <value>
                <fullName>Equipment Hire</fullName>
            </value>
            <value>
                <fullName>Glassware Hire</fullName>
            </value>
            <value>
                <fullName>Staff Only</fullName>
            </value>
            <value>
                <fullName>Wine Package</fullName>
            </value>
            <value>
                <fullName>mobile bar</fullName>
            </value>
            <value>
                <fullName>ice</fullName>
            </value>
            <value>
                <fullName>eau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>