force-app/main/default/objects/Opportunity/fields/Setup_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Setup_Breakdown__c</fullName>
    <inlineHelpText>Do you have specific setup and breakdown times we need to adhere to?</inlineHelpText>
    <label>Setup Breakdown</label>
    <length>255</length>
    <type>Text</type>
</CustomField>