force-app/main/default/objects/Opportunity/fields/Signage_requirement__c.field-meta.xml
<CustomField>
    <fullName>Signage_requirement__c</fullName>
    <inlineHelpText>Would you like any additional signage or menu boards to be provided with the coffee cart?</inlineHelpText>
    <label>Signage requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>