force-app/main/default/objects/Opportunity/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <inlineHelpText>Are there any other special requests or considerations we should be aware of?</inlineHelpText>
    <label>Special Requests</label>
    <type>TextArea</type>
</CustomField>