force-app/main/default/objects/Opportunity/fields/Speciality_Items__c.field-meta.xml
<CustomField>
    <fullName>Speciality_Items__c</fullName>
    <inlineHelpText>Do you require any speciality items, such as dairy-free or alternative milk options?</inlineHelpText>
    <label>Speciality Items</label>
    <type>TextArea</type>
</CustomField>