force-app/main/default/objects/Opportunity/fields/Staff_Booked__c.field-meta.xml
<CustomField>
    <fullName>Staff_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates staff have been confirmed/booked</description>
    <label>Staff Booked?</label>
    <type>Checkbox</type>
</CustomField>