force-app/main/default/objects/Opportunity/fields/Staff_Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>Staff_Finish_Time__c</fullName>
    <label>Staff End Time</label>
    <type>Time</type>
</CustomField>