force-app/main/default/objects/Opportunity/fields/Staff_Identified__c.field-meta.xml
<CustomField>
    <fullName>Staff_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates required staff have been identified</description>
    <label>Staff Identified?</label>
    <type>Checkbox</type>
</CustomField>