force-app/main/default/objects/Opportunity/fields/Staff_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Staff_Start_Time__c</fullName>
    <label>Staff Start Time</label>
    <type>Time</type>
</CustomField>