force-app/main/default/objects/Opportunity/fields/Staffing_Details__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Details__c</fullName>
    <label>Staffing Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>