force-app/main/default/objects/Opportunity/fields/Uniform_Required__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Required__c</fullName>
    <label>Uniform Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black Shirt</fullName>
            </value>
            <value>
                <fullName>Black Shirt + Black Tie</fullName>
            </value>
            <value>
                <fullName>Black Shirt + Black Tie + Black Vest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>White Shirt</fullName>
            </value>
            <value>
                <fullName>White Shirt + Black Tie</fullName>
            </value>
            <value>
                <fullName>White Shirt + Black Tie + Black Vest</fullName>
            </value>
            <value>
                <fullName>Suit</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Black Suit + White Shirt + Tie</fullName>
            </value>
            <value>
                <fullName>Black T-shirt + Jeans</fullName>
            </value>
            <value>
                <fullName>Black Shirt + White Sneakers</fullName>
            </value>
            <value>
                <fullName>Client supplying uniform. Staff to wear own sneakers.</fullName>
            </value>
            <value>
                <fullName>Black t shirt, Black pants, Sneakers (white requested)</fullName>
            </value>
            <value>
                <fullName>Provided</fullName>
            </value>
            <value>
                <fullName>Jeans, black tee.</fullName>
            </value>
            <value>
                <fullName>White T-shirt + Black Pants</fullName>
            </value>
            <value>
                <fullName>All Black</fullName>
            </value>
            <value>
                <fullName>black pants</fullName>
            </value>
            <value>
                <fullName>White T-Shirt</fullName>
            </value>
            <value>
                <fullName>Bowtie</fullName>
            </value>
            <value>
                <fullName>Maison en Blanc</fullName>
            </value>
            <value>
                <fullName>Maison en Noir</fullName>
            </value>
            <value>
                <fullName>vest</fullName>
            </value>
            <value>
                <fullName>jeans</fullName>
            </value>
            <value>
                <fullName>Black T-shirt + Black Pants</fullName>
            </value>
            <value>
                <fullName>Maison en Noir (Black Business Shirt, Black Business Pants, Black Business shoes)</fullName>
            </value>
            <value>
                <fullName>Maison Noir &amp; Blanc (White Business Shirt, Black Tie, Black Waistcoat, Black Business Pants, Black Business shoes)</fullName>
            </value>
            <value>
                <fullName>Maison Provence (White t-shirt or White business shirt, Light beige pants, White sneakers)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>