force-app/main/default/objects/Opportunity/fields/Venue_Preference__c.field-meta.xml
<CustomField>
    <fullName>Venue_Preference__c</fullName>
    <description>Preferred venue location</description>
    <label>Venue Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>