force-app/main/default/objects/Opportunity/fields/What_is_the_theme_or_style_of_the_event__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_theme_or_style_of_the_event__c</fullName>
    <label>What is the theme or style of the event?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>