force-app/main/default/objects/Opportunity/fields/Where_is_the_event_location__c.field-meta.xml
<CustomField>
    <fullName>Where_is_the_event_location__c</fullName>
    <label>Where is the event location?</label>
    <type>TextArea</type>
</CustomField>