force-app/main/default/objects/Opportunity/recordTypes/Catering.recordType-meta.xml
<RecordType>
    <fullName>Catering</fullName>
    <active>true</active>
    <businessProcess>Catering</businessProcess>
    <label>Catering</label>
</RecordType>