force-app/main/default/objects/Opportunity/recordTypes/Coffee_Cart.recordType-meta.xml
<RecordType>
    <fullName>Coffee_Cart</fullName>
    <active>true</active>
    <businessProcess>Coffee Cart</businessProcess>
    <label>Coffee Cart</label>
</RecordType>