force-app/main/default/objects/Opportunity/recordTypes/Melbourne_Bookings.recordType-meta.xml
<RecordType>
    <fullName>Melbourne_Bookings</fullName>
    <active>true</active>
    <businessProcess>Melbourne Bookings</businessProcess>
    <label>Melbourne Bookings</label>
</RecordType>