force-app/main/default/objects/Opportunity/recordTypes/Sydney_Bookings.recordType-meta.xml
<RecordType>
    <fullName>Sydney_Bookings</fullName>
    <active>true</active>
    <businessProcess>Sydney Bookings</businessProcess>
    <label>Sydney Bookings</label>
</RecordType>