force-app/main/default/objects/Opportunity/validationRules/Australian_Phone_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Australian_Phone_Format_Validation</fullName>
    <active>true</active>
    <description>The phone number should be in the Austrailian Format.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone_Number__c)),
    NOT(
        AND(
            /* Allowed characters: + digits spaces dashes brackets */
            REGEX(
                Phone_Number__c,
                &quot;^[+0-9()\\-\\s]+$&quot;
            ),

            /* After removing + spaces dashes brackets → must be 8–15 digits */
            REGEX(
                SUBSTITUTE(
                    SUBSTITUTE(
                        SUBSTITUTE(
                            SUBSTITUTE(
                                SUBSTITUTE(
                                    Phone_Number__c,
                                    &quot;+&quot;, &quot;&quot;
                                ),
                                &quot; &quot;, &quot;&quot;
                            ),
                            &quot;-&quot;, &quot;&quot;
                        ),
                        &quot;(&quot;, &quot;&quot;
                    ),
                    &quot;)&quot;, &quot;&quot;
                ),
                &quot;^[0-9]{8,15}$&quot;
            )
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Invalid phone number format. Only digits, +, spaces, dashes (-), and brackets ( ) are allowed. 
Phone number must contain 8 to 15 digits.</errorMessage>
</ValidationRule>