force-app/main/default/objects/Opportunity/validationRules/Block_Stage_Changes_After_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Stage_Changes_After_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  OR(
    TEXT(PRIORVALUE(StageName)) = &quot;Closed Won&quot;,
    TEXT(PRIORVALUE(StageName)) = &quot;Closed Lost&quot;
  )
)</errorConditionFormula>
    <errorMessage>You cannot change the Opportunity Stage after it has been marked as Closed Won or Closed Lost.</errorMessage>
</ValidationRule>