force-app/main/default/objects/Opportunity/validationRules/Cannot_move_the_enquiry_stages_backwards.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_move_the_enquiry_stages_backwards</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,

    ISCHANGED(StageName),

    CASE( TEXT(PRIORVALUE(StageName)),
        &quot;New Enquiry&quot;, 1,
        &quot;Needs Analysis&quot;, 2,
        &quot;Quote Creation&quot;, 3,
        &quot;Quote Accepted&quot;, 4,
        &quot;Invoiced&quot;, 5,
        &quot;Invoice Paid&quot;, 6,
        &quot;Closed Won&quot;, 7,
        &quot;Closed Lost&quot;, 8,
        0
    )
    &gt;
    CASE( TEXT(StageName),
        &quot;New Enquiry&quot;, 1,
        &quot;Needs Analysis&quot;, 2,
        &quot;Quote Creation&quot;, 3,
        &quot;Quote Accepted&quot;, 4,
        &quot;Invoiced&quot;, 5,
        &quot;Invoice Paid&quot;, 6,
        &quot;Closed Won&quot;, 7,
        &quot;Closed Lost&quot;, 8,
        0
    )
)</errorConditionFormula>
    <errorMessage>You cannot move the enquiry stage backwards.</errorMessage>
</ValidationRule>