force-app/main/default/objects/Opportunity/validationRules/Event_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(Event_Date__c &gt; Today())</errorConditionFormula>
    <errorMessage>Only future dates are allowed for the event date.</errorMessage>
</ValidationRule>