force-app/main/default/objects/Opportunity/validationRules/Event_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  OR(
    AND(ISPICKVAL(StageName, &quot;Quote Sent&quot;), NOT(ISPICKVAL(Quote_Status__c, &quot;Sent&quot;))),
    AND(ISPICKVAL(StageName, &quot;Quote Under Review&quot;), NOT(ISPICKVAL(Quote_Status__c, &quot;Viewed by Customer&quot;))),
    AND(ISPICKVAL(StageName, &quot;Quote Accepted&quot;), NOT(ISPICKVAL(Quote_Status__c, &quot;Accepted&quot;)))
  )
)</errorConditionFormula>
    <errorMessage>You cannot change the Opportunity Stage unless the Quote Status matches.</errorMessage>
</ValidationRule>