force-app/main/default/objects/Opportunity/listViews/Catering_Enquiries.listView-meta.xml
<ListView>
    <fullName>Catering_Enquiries</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>Record_Type__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Catering</value>
    </filters>
    <label>Catering Enquiries</label>
</ListView>